z-index in modal fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -214,6 +214,7 @@ nav a.header-active-page::after {
   right: 0;
   width: 100%;
   height: 100%;
+  z-index: 1;
 
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
